kube/deploy/apps/code-server/app/envoy.yaml
---
# yaml-language-server: $schema=https://crds.jjgadgets.tech/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: &app code-server
  namespace: *app
spec:
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
  authorization:
    defaultAction: Deny
    rules:
      - action: Allow
        principal:
          clientCIDRs: ["${IP_JJ_V4:=127.0.0.1/32}"]
